--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,8 +15,7 @@
     "react-markdown": "^10.1.0",
     "react-spinners": "^0.17.0",
     "rehype-highlight": "^7.0.2",
-    "uuid": "^11.1.0",
-    "serve": "^14.2.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
